<resources>
    <string name="app_name">停车场引导系统</string>
    <string name="version_name">版本名称</string>
    <string name="get_in">进   入</string>
    <string name="leave">离   开</string>
    <string name="navigate">停车场导航</string>
    <string name="user_name">用 户 名</string>
    <string name="user_rigister_hint">请输入用户名,且不少于2位</string>
    <string name="password">密    码</string>
    <string name="password_hint">密码不应小于6位</string>
    <string name="real_name">真实姓名</string>
    <string name="id_card">身份证号</string>
    <string name="car_card">车 牌 号</string>
    <string name="phone">手 机 号</string>
    <string name="cancel">取    消</string>
    <string name="comfirm">确    认</string>
    <string name="parking_record">停车记录</string>
    <string name="topup_record">充值记录</string>
    <string name="login">用户登录</string>
    <string name="setting">设    置</string>
    <string name="log_out">退出登录</string>
    <string name="car_info">车位信息</string>
    <string name="button_controller">开关控制</string>
    <string name="information">个人信息</string>
    <string name="login_username">用 户 名</string>
    <string name="login_password">密    码</string>
    <string name="login_back">返    回</string>
    <string name="login_login">登    录</string>
    <string name="login_register">还没有账号?  点击注册</string>
    <string name="exit_message">再按一次退出程序</string>
    <string name="user_register">用户注册</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="repeat_password">请再次输入密码</string>
    <string name="comfirm_password">确认密码</string>
    <string name="hint_real_name">请输入您的真实姓名</string>
    <string name="hint_car_card">请输入你的车牌号</string>
    <string name="hint_phone">请输入你的手机号</string>
    <string name="topup">充    值</string>
    <string name="login_tip">点击登录</string>
    <string name="topup_im">立即充值</string>
    <string name="balance">余   额</string>
    <string name="my_location">我在哪儿</string>
    <string name="navigate_start">开始导航</string>

    <string name="action_settings">Settings</string>
    <string name="pay_title">请输入支付密码</string>
    <string name="pay_sure">确认支付</string>
    <string name="pay_cancel">取消</string>
    <string name="pay_content">消费金额：34.50元</string>
</resources>
